--- a/templates/app_main/index.html
+++ b/templates/app_main/index.html
@@ -6,13 +6,8 @@
     
     <hr>
     
-    <h2>Add element:</h2>
+    <h2>Csrf token on front page:</h2>
     
-    <form method="post" enctype="multipart/form-data">
-        <input type="hidden" name="form_id" value="model_form_add_element">
-        <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-        {{ model_form.as_ul }}
-        <input type="submit" value="Ok">
-    </form>
+    {{ csrf_token }}
     
 {% endblock %}
