--- a/templates/app_main/menu.html
+++ b/templates/app_main/menu.html
@@ -12,6 +12,14 @@
 | <a href="{% url 'template_detail_view_page' element_code='wertyuioo' %}">Tpl detail</a>
 | <a href="{% url 'template_form_page' %}">Tpl form</a>
 | <a href="{% url 'template_create_page' %}">Tpl create</a>
+{% if user.is_authenticated %}
+    | <a href="{% url 'users_namespace:logout' %}">Logout ({{ user.username }})</a>
+{% else %}
+    | <a href="{% url 'users_namespace:login' %}">Login</a>
+    | <a href="{% url 'users_namespace:login_view' %}">Login view</a>
+    | <a href="{% url 'users_namespace:login_def' %}?next=/catalog/">Login def</a>
+    | <a href="{% url 'users_namespace:reg' %}">Reg</a>
+{% endif %}
 | <a href="/admin">Admin</a>
 | <a href="{% url 'clear_cache' %}">Clear cache</a>
 
