--- a/templates/app_catalog/elements_list.html
+++ b/templates/app_catalog/elements_list.html
@@ -29,20 +29,23 @@
     {% if page_obj.has_other_pages %}
 
         <hr>
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
-        {% endif %}
-        {% for item in paginator.page_range %}
-            {% if page_obj.number == item %}
-                <a href="?page={{ item }}" style="color: red">{{ item }}</a>
-            {% elif item >= page_obj.number|add:-2 and item <= page_obj.number|add:2 %}
-                <a href="?page={{ item }}">{{ item }}</a>
+        
+        {% if paginator.num_pages > 1 %}
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
             {% endif %}
-        {% endfor %}
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+            {% for item in paginator.page_range %}
+                {% if page_obj.number == item %}
+                    <a href="?page={{ item }}" style="color: red">{{ item }}</a>
+                {% elif item >= page_obj.number|add:-2 and item <= page_obj.number|add:2 %}
+                    <a href="?page={{ item }}">{{ item }}</a>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+            {% endif %}
         {% endif %}
-    
+        
     {% endif %}
     
 {% endblock %}
