--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,9 @@
     {% if user.is_authenticated %}
         Вы авторизованны как {{ user.username }}...
     {% else %}
+        {% if form.non_field_errors %}
+            <div style="color: red">{{ form.non_field_errors }}</div>
+        {% endif %}
         <form method="post">
             <input type="hidden" name="next" value="{{ next }}">
             {% csrf_token %}
@@ -13,5 +16,7 @@
             <input type="submit" value="Ok">
         </form>
     {% endif %}
+    
+    <a href="{% url 'users_namespace:reset_pass' %}">Reset pass</a>
     
 {% endblock %}
