--- a/templates/app_main/menu.html
+++ b/templates/app_main/menu.html
@@ -13,12 +13,14 @@
 | <a href="{% url 'template_form_page' %}">Tpl form</a>
 | <a href="{% url 'template_create_page' %}">Tpl create</a>
 {% if user.is_authenticated %}
+    | <a href="{% url 'users_namespace:profile' %}">Profile</a>
     | <a href="{% url 'users_namespace:logout' %}">Logout ({{ user.username }})</a>
 {% else %}
     | <a href="{% url 'users_namespace:login' %}">Login</a>
     | <a href="{% url 'users_namespace:login_view' %}">Login view</a>
     | <a href="{% url 'users_namespace:login_def' %}?next=/catalog/">Login def</a>
     | <a href="{% url 'users_namespace:reg' %}">Reg</a>
+    | <a href="{% url 'users_namespace:reg_from_ucf' %}">Reg UCF</a>
 {% endif %}
 | <a href="/admin">Admin</a>
 | <a href="{% url 'clear_cache' %}">Clear cache</a>
