--- a/templates/app_catalog/section.html
+++ b/templates/app_catalog/section.html
@@ -5,7 +5,7 @@
             <td>
                 {% include './inc/tree.html' %}
             </td>
-            {% if items %}
+            {% if pager %}
                 <td>
                     <table border="1">
                         {% for item in pager %}
